# MIS-Summarizer

./: pyproject.toml
.devcontainer/: devcontainer.json
src/mis_converter/: __init__.py  app.py  cli.py  converter.py  sale_purchase.py
