[project]
name = "mis-converter"
version = "0.1.0"
description = "MIS Data Conversion Tool"
readme = "README.md"
authors = [
    { name = "Muhammad Anus", email = "mohdanus20@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "streamlit>=1.40.0",
    "xlrd>=2.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
